feat: new params for list resources
