# proto/v1beta1/shield.pb.validate.go
@@ -15053,11 +15053,7 @@ func (m *ListResourcesRequest) validate(all bool) error {
 
 	// no validation rules for GroupId
 
-	// no validation rules for ProjectId
-
 	// no validation rules for OrganizationId
-
-	// no validation rules for NamespaceId
 
 	// no validation rules for PageSize
 
